--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,29 @@
 @tailwind utilities;
 
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
 @layer base {
   body {
     @apply bg-green-800 text-white;
     font-family: 'Press Start 2P', system-ui;
-    background-image: url('../src/field.png');
+    background-image: url('https://images.unsplash.com/photo-1566577739112-5180d4bf9390?q=80&w=2026&auto=format&fit=crop');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     image-rendering: pixelated;
+  }
+
+  /* Add a dark overlay to make text more readable */
+  body::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
   }
 }
 
