--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   body {
     @apply text-white;
     font-family: 'Press Start 2P', system-ui;
-    background-image: url('/field.png');
+    background-image: url('../src/field.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
